--- a/Papers/SDM1/article.tex
+++ b/Papers/SDM1/article.tex
@@ -6,7 +6,9 @@
 \usepackage{algorithmic}
 \usepackage{graphicx}
 \usepackage{textcomp}
+\usepackage{listings}
 \usepackage{xcolor}
+\usepackage[polish]{babel}
 \usepackage[T1]{fontenc}
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
@@ -25,9 +27,13 @@
 \maketitle
 
 \begin{abstract}
-    Statyczne metaprogramowanie to technika programistyczna umożliwiająca analizę, modyfikację lub generację kodu w czasie kompilacji.
-    Współczesne, niskopoziomowe języki programowania wprowadzają wsparcie dla tych mechanizmów, w ograniczonym zakresie.
-    W ramach tej pracy zaproponowano nowy język programowania: C-=-1, zaprojektowany od początku z myślą o metaprogramowaniu, oraz nowe podejście do konstrukcji kompilatora: kompilacja przez interpretację.
+Statyczne metaprogramowanie to technika programistyczna umożliwiająca analizę, modyfikację lub generację kodu w czasie kompilacji.
+Współczesne, niskopoziomowe języki programowania wprowadzają wsparcie dla tych mechanizmów, w ograniczonym zakresie.
+W ramach tej pracy zaproponowano nowy język programowania: C-=-1, zaprojektowany od początku z myślą o metaprogramowaniu, oraz nowe podejście do konstrukcji kompilatora: kompilacja przez interpretację.
+Wykonywanie kodu w czasie kompilacji jest w nim nie dodatkiem do języka a fundamentalną jego częścią.
+
+W ramach tej pracy pokazano, że to podejście nie tylko oferuje użytkownikowi dowolność w wykonywanych w trakcie kompilacji obliczeniach ale, także dużo większą elastyczność w użyciu języka.
+Wiele elementów innych języków programowania, wymagających specjalnego wsparcia ze strony kompilatora, może być zaimplementowana bezpośrednio w języku.
 \end{abstract}
 
 \begin{IEEEkeywords}
@@ -49,6 +55,41 @@ Celem C-=-1 jest umożliwienie wykonywania oraz dowolnego modyfikowania kodu w c
 Osiągnięto to poprzez stworzenie interpretera tego języka, a następnie udostępnienie mu programu jako modyfikowalnej struktury danych.
 W ten sposób, dowolny fragment kodu może być wykonany w czasie kompilacji oraz użytkownik może dowolnie modyfikować swój program, używając normalnej składni.
 
+\section{Istniejące rozwiązania}
+Wśród przemysłowo zastosowanych języków programowania istnieje szeroka gama mechanizmów meta-programistycznych. Stosuje się w nich zarówno statyczną jak i dynamiczną refleksję. W popularnie używanych językach, mechanizmy dynamiczne są zwykle dużo bardziej rozbudowane, przyjazne użytkownikowi i potężne.
+\subsection{C\#}
+\subsubsection{Atrybuty}
+W języku C\# atrybuty służą głównie do przechowywania metadanych.
+\subsubsection{Refleksja}
+\subsubsection{Analizatory kodu}
+\subsubsection{Generatory kodu}
+C\#9 wprowadził możliwość pisania generatorów kodu. Jest to bardzo podobne rozwiązanie do makr w języku Rust. Generatory kodu to specjalne klasy, których kod jest wykonywany w trakcie kompilacji. 
+Mechanizm C\# jest jednak bardziej zaawansowany. Umożliwia generowanie kodu, używając wszystkich elementów języka, zamiast zapewniać prosty szablon. Te generatory, tak jak w Rust, nie mają jednak dostępu do informacji zbieranych przez kompilator, poza drzewem składniowym oraz nie mogą modyfikować istniejącego kodu.\par
+Generatory kodu nadal są rozwijane i w najbliższym czasie nie wejdą do stabilnego C\#. Stanowią one jednak ciekawą zmianę w kierunku języka, w stronę większego wsparcia dla statycznego meta-programowania.
+\subsection {Rust}
+Ponieważ Rust jest stosunkowo młody, jego projektanci mogli czerpać z doświadczeń innych języków. Wyraźnie widać to w jego składni, zintegrowanym systemie zarządzania zależnościami oraz bardzo przyjaznym kompilatorze.\par
+Z tego powodu, nie zawiera on też tradycyjnego preprocesora, takiego jak w C/C++ czy C\#. Makra w Rust są tak naprawdę funkcjami operującymi na drzewie składniowym programu. Jest to zdecydowany postęp względem prostego zastępowania tekstu jak w C/C++, lecz ma też swoje wady.\par
+Makra w języku Rust nadal operują na, co prawda ustrukturyzowanym, ale nadal, tekście. Oznacza to, że nie mają one dostępu do systemu typów ani żadnych innych informacji zgromadzonych przez kompilator.\par
+\subsection{C++20}
+C++ zawiera szeroką gamę mechanizmów meta-programistycznych oraz technik do statycznej walidacji kodu. Były one stopniowo wprowadzane do języka przez cały czas jego istnienia, bez spójnego planu.\par
+\subsubsection{Szablony}
+Szablony w C++ można rozumieć jako oddzielny, funkcyjny, zdolny do symulacji maszyny Turinga, język programowania \cite{template_turing_complete}. Meta-programowanie szablonowe powstało nie jako świadomy wysiłek twórców języka, lecz jako naturalna, nieprzewidziana konsekwencja jego zasad.\par
+\subsubsection{Koncepty}
+Koncepty zostały wprowadzone w C++20 jako sposób na lepsze dokumentowanie szablonów, oraz czytelniejsze komunikaty o błędzie w wypadku niepoprawnego użycia. Używa się ich do ograniczania, które typy mogą zostać wykorzystane w danym szablonie.\par
+Koncepty są definiowane jako zbiór wymagań, które typ musi spełnić. Mogą to być proste wyrażenia logiczne jak i weryfikowanie czy dana metoda istnieje oraz jaki typ zwraca. W przeciwieństwie do pozostałych omawianych mechanizmów, koncepty bronią programistę przed niezrozumiałymi błędami kompilacji zamiast przed błędami czasu uruchomienia.\par
+\subsubsection{Atrybuty}
+Atrybuty zostały oficjalnie wprowadzone do języka w C++11. Umożliwiają one przekazanie kompilatorowi dodatkowych informacji na temat kodu źródłowego. Te dane są potem wykorzystywane w trakcie kompilacji do wydawania lub ignorowania ostrzeżeń. Dwa przykłady warte omówienia to fallthrough oraz no\_discard, ponieważ prezentują obydwa przypadki zastosowania atrybutu.\par
+Atrybut fallthrough powstał, aby rozwiązać typowy problem języków zawierających konstrukcję switch. W większości zastosowań, celem programisty jest stworzenie zestawu niezależnych od siebie przypadków, spośród których zostanie wykonany jeden na podstawie wartości jakiejś zmiennej.\par
+Niestety domyślnym zachowaniem konstrukcji switch, po wykonaniu bloku jest przejście do następnego (tak zwany fallthrough). Kompilatory zaczęły więc wydawać ostrzeżenie, jeśli blok case nie zostanie zakończony instrukcją break. To tworzy jednak inny problem: czasami programista chce osiągnąć dokładnie takie zachowanie. Niektóre kompilatory zaczęły przez to zwracać uwagę na komentarze, szukając tam wyrażenia fallthrough (w GCC flaga -Wimplicit-fallthrough=3).\par
+W C++11 sformalizowano to zachowanie, tworząc atrybut fallthrough. Zaaplikowanie go do przypadku konstrukcji switch, powstrzymuje kompilator przed wydaniem ostrzeżenia.\par
+Atrybut no\_discard zamiast uciszać ostrzeżenie, generuje je. Jego zadaniem jest wykrywanie sytuacji w których programista ignoruje wartość zwracaną przez funkcję. Można go zaaplikować zarówno do typów (wtedy każda funkcja zwracająca ten typ staje się no\_discard) lub do funkcji.\par
+Typowym przykładem zastosowanie tego atrybutu są kody błędów. Ze względu na duży koszt mechanizmu wyjątków w C++, w niektórych projektach się ich nie stosuje. Zamiast tego, funkcje których wykonanie może się nie powieść, zwracają strukturę informującą o błędzie. Ponieważ programista wołający taką funkcję, nie ma obowiązku sprawdzić wyniku tego wywołania, łatwo było o błąd. Stąd konieczność atrybutu no\_discard.\par
+Podstawową wadą atrybutów w C++ jest fakt, że są one zachowaniem bezpośrednio wpisanym w kompilator. Nie istnieje możliwość napisania własnego atrybutu a ich lista jest bardzo krótka.\par
+\subsubsection{Funkcje constexpr}
+Język C++11 wprowadził koncepcję constexpr. Zaaplikowanie tego modyfikatora do zmiennej lub funkcji, informuje kompilator że mogą one być ewaluowane w trakcie kompilacji. Funkcje constexpr mają też nałożony szereg ograniczeń co do swojej struktury. Z każdą kolejną wersją języka są one rozluźniane, jednak nie każda funkcja może być ewaluowana w trakcie kompilacji.\par
+Ponadto, funkcje constexpr nie mają większego dostępu do struktury programu niż normalny program. Nie dają one możliwości modyfikowania istniejącego ani generowania nowego kodu. Stanowią one więc jedynie sposób na optymalizację programu.\par
+
+
 \section{Struktura języka}
 
 Język C-=-1 bazuje na C++, z elementami składni Rust.
@@ -67,7 +108,7 @@ Możliwość definiowania metod oraz pól na każdym poziomie hierarchi dziedzic
 Na przykład, nie jest jasnym czy metoda zwracająca listę pól klasy, powinna uwzględniać pola z klasy bazowej.
 W ostatecznie wybranym modelu języka wszystkie pola i metody muszą być zdefiniowane w typie konkretnym, natomiast wcześniej wspomniany problem jest ograniczony do iterowania po metodach interfejsów.
 
-Atrybuty w języku C-=-1 są bardzo podobne do tych które  można znaleźć w języku C\#.
+Atrybuty w języku C-=-1 są bardzo podobne do tych które można znaleźć w języku C\#.
 Można nimi adnotować deklaracje typów, zmiennych oraz funkcji.
 Deklarując atrybut, użytkownik może zaimplementować szereg specjalnych metod, reagujących na użycie adnotowanego elementu.
 Na przykład dla atrybutu dołączanego do funkcji, użytkownik może napisać metodę, która będzie wykonywana za każdym razem, kiedy dana funkcja jest wywoływana w kodzie.
@@ -85,18 +126,49 @@ Najogólniej, proces kompilacji programu składa się z następujących kroków:
     \item Wykonanie kodu w interfejsie backendu.
 \end{enumerate}
 
-Reprezentacja pośrednia kodu użytkownika, jest budowana używając struktur danych interpretera.
-Utrudnia to znacząco pisanie kompilatora, ponieważ efektywnie usuwa z języka statyczne typowanie.
+Reprezentacja pośrednia kodu użytkownika jest budowana, używając struktur danych interpretera.
+Utrudnia to znacząco pisanie kompilatora, ponieważ efektywnie usuwa z języka implementacji statyczne typowanie.
 Ta decyzja została podjęta, aby uniknąć konieczności konwersji pomiędzy reprezentacją pośrednią widzianą przez kompilator i kod użytkownika oraz synchronizowania tych dwóch struktur danych.
+
+\subsection{Reprezentacja pośrednia}
+
+Reprezentacja pośrednia jest istotnym elementem języka, na którym opiera się meta-programowanie w C-=-1. W związku z czym każda jej część jest udokumentowana w załączniku 1. Wewnątrz kompilatora, reprezentacja pośrednia jest przechowywana w ramach struktur danych interpretera, aby umożliwić interakcję z interpretowanym kodem.
+Ponieważ użytkownik C-=-1 ma operować na CIR (C-=-1 Intermidiate Representation), jej struktura jest bliska językowi, który reprezentuje. Poza dodaniem specjalnych typów instrukcji struktura CIR jest niemal identyczna z C-=-1. Takie podejście ma zarówno wady i zalety. 
+Z jednej strony sprawia ono, że błędy w kompilatorze są łatwiejsze, oraz front-end jest łatwiejszy do implementacji. Przez podobieństwo do kodu źródłowego sprawia, że różnice względem poprawnego rezultatu są dużo bardziej oczywiste od bardziej abstrakcyjnych reprezentacji.
+Taka reprezentacja jest jednak dużo trudniejsza do interpretowania. W przeciwieństwie do języków takich jak CIL (Common Intermediate Language) \cite{CLI}, CIR nie operuje abstrakcyjnej maszynie stosownej.
+Główne różnice w strukturze między C-=-1 a CIR polegają na bardziej dosłownym wyrażeniu programu. W reprezentacji pośredniej wszystkie odniesienia są w pełni kwalifikowane nazwą paczki i przestrzenią nazw. Finalizatory są wywoływane wprost, używając specjalnej instrukcji. Zamiast rozwiązywania przeciążeń funkcji, CIR odnosi się do konkretnego przeciążenia przez unikatowy identyfikator.
 
 
 \subsection{Interpreter}
-\subsection{Kompilator}
+
+Interpreter jest najważniejszym komponentem proponowanej architektury.
+Jest on odpowiedzialny za wykonywanie kodu napisanego w C-=-1 przedstawionego za pomocą reprezentacji pośredniej.
+
+Interpreter operuje na kilku prostych typach danych: typach prymitywnych takich jak liczba czy napis, obiektach oraz kolekcjach.
+Oznacza to, że jego projekt jest bardzo podobny do prymitywnego środowiska języka dynamicznie typowanego.
+
+Reprezentacja pośrednia C-=-1 jest tworzona, używając tych struktur danych.
+Dzięki temu kod wykonywany przez interpreter może ją bezpośrednio modyfikować.
+
+
+\subsection{Interfejs backendu}
+
+Interfejs backendu jest komponentem proponowanego kompilatora, odpowiedzialnym za generowanie kodu LLVM na podstawie reprezentacji pośredniej.
+Ponieważ na tym etapie projektu, interpreter C-=-1 był już dostępny, ta część kompilatora mogła zostać napisana w języku docelowym.
+Kompilator został zaprojektowany w taki sposób, aby można było wymienić ten komponent na implementację użytkownika.
+
+Podstawową zaletą tego podejścia, jest powstanie dużego projektu w języku C-=-1.
+Praktyczne zastosowanie języka znacząco przyśpiesza jego rozwój.
+Ocena jakości takiego języka staje się też dużo łatwiejsza.
+
+Implementacja komponentu kompilatora od razu w języku docelowym zmniejsza też nakład pracy konieczny przy tworzeniu kompilatora w nowym języku.
+Innymi słowy, przejście pomiędzy pierwszym kompilatorem, napisanym w istniejącym już języku a Bootstrapping Compiler jest prostsze.
+
 \section{Zalety nowego podejścia}
 
 Postawienie możliwości wykonania kompilowanego kodu jako pierwszy priorytet ma szereg zalet w porównaniu z typowym podejściem.
 
-\subsubsection{Ewaluacja kodu w czasie kompilacji}
+\subsection{Ewaluacja kodu w czasie kompilacji}
 
 W kompilatorach C++ ewaluacja funkcji w trakcie kompilacji powstaje zwykle na bazie systemów, które miały zapewniać proste optymalizacje takie jak wykonywanie operacji arytmetycznych na stałych.
 Pomimo tego, że te systemy są obecnie bardzo zaawansowane i potrafią ewaluować niemalże dowolny kod, programiści nie mogą ich używać jawnie.
@@ -109,18 +181,79 @@ W zaproponowanej architekturze, podstawowym komponentem kompilatora jest interpr
 Oznacza to, że nie istnieje wyrażenie, które nie może być ewaluowane w czasie kompilacji, pod warunkiem, że znane są wszystkie jego argumenty.
 W obecnej implementacji niemożliwym jest odczytywanie danych z konsoli oraz wywoływanie funkcji zdefiniowanych jako symbol zewnętrzny.
 
-\subsubsection{Rozszerzalność języka}
+\subsection{Rozszerzalność języka}
 
-\subsubsection{Implementacja pierwszego kompilatora}
+Jedną z konsekwencji zaproponowanych mechanizmów jest możliwość rozszerzania języka bez modyfikacji kompilatora.
+Oznacza to że pewne elementy składni, obecne w innych językach, stają się zbędnę w C-=-1.
+
+Większość języków programowania zawiera mechanizm umożliwiający import symboli zewnętrznych.
+Mogą one pochodzić z kodu napisanego w innym języku lub z już skompilowanej biblioteki.
+Import symboli zewnętrznych stanowi bardzo dobry przykład na elastyczność języka, osiągniętą dzięki zaproponowanej konstrukcji kompilatora.
+
+W wypadku C/C++, wymaga to użycia słowa \i{Cpp}{external}, do zdefiniowania symbolu zewnętrznego oraz przekazania odpowiedniego argumentu do linkera.
+W C-=-1 ten sam rezultat można osiągnąć, przypisując funkcji odpowiednie metadane, które potem zostaną odczytane przez  backend.
+Wbudowana wersja tego programu obsługuje wczytywanie definicji funkcji z plików lib oraz zastępowanie jej ciała kodem LLVM.
+Ta możliwość istnieje dzięki dużej elastyczności języka oferowanej przez zaproponowaną architekturę.
+
+Listing \ref{lst:replaceWithLLVMAttribute} przedstawia atrybut \lstinline{Cpp}{replaceWithLLVMIR} z biblioteki standardowej C-=-1. 
+Pobiera on kod LLVMIR z pliku wskazanego przez użytkownika, a następnie ustawia w definicji wybranej funkcji zmienną „llvm-representation”.
+Backend interface może potem odczytać tę wartość i wykorzystać ją do wygenerowania kodu dla backendu.
+
+\begin{lstlisting}[
+    caption={Atrybut zastępujący ciało funkcji kodem LLVM},
+    aboveskip=0pt,
+    label={lst:replaceWithLLVMAttribute}
+]
+public att<function> ReplaceWithLLVMIR
+{
+  private _filename: string;
+  private _nameOftypeToReplace: string;
+  private _nameToReplace: string;
+
+  public fn construct(
+    filename: string,
+    nameOfTypeToReplace: string,
+    nameToReplace: string)
+  {
+    self._filename = filename;
+    self._nameOftypeToReplace =
+        nameOfTypeToReplace;
+    self._nameToReplace = nameToReplace
+  }
+
+  public fn attach(f: functionDescriptor)
+  {
+    let ir = read_all_file(self._filename);
+    ir = ir.replace("$" +
+     self._nameOftypeToReplace, 
+     self._nameToReplace);
+    f.store("llvm-representation", ir);
+  }
+}
+
+\end{lstlisting}
+
+
+\subsection{Implementacja pierwszego kompilatora}
 
 Nieoczekiwaną zaletą opisywanego podejścia jest ułatwienie implementacji pierwszego kompilatora.
 W wielu językach programowania kompilator jest napisany w języku, który kompiluje.
 Takie podejście ma wiele zalet, takich jak przyśpieszanie rozwoju języka.
 W wielu wypadkach, na początku istnienia kompilator jest jedynym dużym projektem napisanym w danym języku.
-Takie kompilatory są określane jako Bootstrapping Compiler \cite{b1}.
+Takie kompilatory są określane jako Bootstrapping Compiler \cite{b1}\cite{bootstrap1}.
 
+W typowym podejściu najpierw należy zaimplementować prosty kompilator w istniejącym już języku. 
+Dopiero potem można pisać narzędzia w języku docelowym.
+To istotnie zwiększa nakład pracy wymagany do stworzenia nowego języka programowania. 
 
+W zaproponowanym podejściu w pierwszej kolejności powstaje interpreter oraz model semantyczny programu jest dostępny jako struktura danych.
+Dzięki temu komponent odpowiedzialny za generowanie kodu maszynowego może być napisany w języku docelowym.
+Zmniejsza to ilość kodu, który trzeba napisać w innym języku, aby stworzyć kompilator.
 
+Ponadto, ponieważ ten komponent jest interpretowanym C-=-1, użytkownik może go zastąpić bez rekompilacji kompilatora.
+Ta możliwość jest bardzo przydatna przy implementacji kompilatora.
+Czas kompilacji przy tak dużym projekcie jest znaczącym problemem, a taka izolacja znacząco przyśpiesza pracę.
+Dla użytkowników końcowych modyfikowalny backend kompilatora oznacza, że mogą implementować własne optymalizacje, specyficzne dla domeny, w której operują.
 
 \section{Możliwa krytyka}
 
@@ -146,11 +279,22 @@ Ostatecznie doprowadziłoby to do większej ilości błędów, niż miałoby zap
 
 \section{Podsumowanie}
 
+Proponowana architektura kompilatora zapewnia bardzo dobre wsparcie dla metaprogramowania w trakcie kompilacji.
+To z kolei zapewnia bardzo dużą elastyczność języka.
+Wiele aspektów innych języków programowania, które wymagają specjalnego wsparcia ze strony kompilatora, może być zaimplementowane bez takich modyfikacji.
+
+Z drugiej strony, w zaproponowanym podejściu implementacja kompilatora jest dużo trudniejsza w utrzymaniu.
+Modyfikacja tego kodu wymaga dużo dyscypliny oraz wprowadzania walidacji stanu programu, która normalnie odbywa się za pomocą systemu typów.
+
+W obecnym stanie projektu, jakość zaproponowanego rozwiązania jest niemożliwa do określenia.
+W tym celu koniecznym jest dokończenie implementacji kompilatora oraz przeprowadzenie badań na temat użyteczności nowego języka.
+
+
 \begin{thebibliography}{00}
     \bibitem{b1} J Reynolds ``Bootstrapping a self-compiling compiler from machine X to machine Y'' Journal of Computing Sciences in Colleges - JCSC, sty 2003.
+    \bibitem{CLI}ECMA International ``ECMA-335 Common Language Infrastructure (CLI)'', czerw 2012.
+    \bibitem{bootstrap1} A.A.Puntambekar, „Bootstrapping of Compiler,” Compiler Design, Technical Publications, 2009, pp. 1-13
+    \bibitem{template_turing_complete} T Veldhuizen ``C++ Templates are Turing Complete'' 2003
 \end{thebibliography}
-\vspace{12pt}
-\color{red}
-IEEE conference templates contain guidance text for composing and formatting conference papers. Please ensure that all template text is removed from your conference paper prior to submission to the conference. Failure to remove the template text from your paper may result in your paper not being published.
 
 \end{document}
