tons more stuff

--- a/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
+++ b/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
@@ -1,5 +1,11 @@
 \section{Wyzwania}
+
+
 \subsection{Operator new}
+
+Operator \mintinline{Cpp}{new} w C-=-1, tak jak w C++ służy do dynamicznej alokacji pamięci na stercie.
+
+
 \subsection{Wybór przeciążenia funkcji}
 To czy funkcja jest wykonywalna w czasie kompilacji albo uruchomienia można ustalić bardzo późno w trakcie budowy modelu semantycznego.
 \subsection{Integracja z back-endem}
