--- a/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
+++ b/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
@@ -8,6 +8,13 @@ Operator \mintinline{Cpp}{new} w C-=-1, tak jak w C++ służy do dynamicznej alo
 
 \subsection{Wybór przeciążenia funkcji}
 To czy funkcja jest wykonywalna w czasie kompilacji albo uruchomienia można ustalić bardzo późno w trakcie budowy modelu semantycznego.
+
+\subsection{Wyrażenia literałowe}
+
+Wyrażenie literałowe przedstawia stałą wartość.
+Na przykład w języku C++ \mintinline{CPP}{int a = 4;} deklaruje i inicjalizuje zmienną a literałem 4.
+Wyrażenia lietrałowe mogą reprezentować stałe różnych typów wbudowanych 
+
 \subsection{Integracja z back-endem}
 Przy pierwszym podejściu do budowy reprezentacji pośredniej, użyto dedykowanych struktur danych. Było to podejście najbardziej naturalne i dające najwięcej bezpieczeństwa dzięki silnemu typowaniu. Wszystkie struktury danych opisane w rozdziale \ref{reprezentacja_posrednia} miały powiązane ze sobą klasy C++.
 
