compilation of excluded types

--- a/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
+++ b/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
@@ -1,5 +1,8 @@
 \section{Wyzwania}
 
+\subsection{Funkcje generyczne z ograniczeniami}
+
+Funkcje mogą być wykluczane w trakcie uruchomienia lub kompilacji. Jeśli generyk takiej funkcji zostanie stworzony z typem dalej ograniczającym wykonywalność tej funkcji, ona może być wykonywalna nigdy.
 
 \subsection{Operator new}
 
