c binidngs completed on a very basic level

--- a/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
+++ b/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
@@ -1,4 +1,6 @@
 \section{Wyzwania}
+\subsection{Instancje generyków jako element modelu semantycznego}
+Gdzie wsadzić instancję generyka?
 
 \subsection{Funkcje generyczne z ograniczeniami}
 
