--- a/Papers/WUT-Master-Thesis/bibliografia.bib
+++ b/Papers/WUT-Master-Thesis/bibliografia.bib
@@ -17,9 +17,10 @@ volume = {52},
 journal = {ACM Computing Surveys},
 doi = {10.1145/3354584}
 }
-@unpublished{stroustrup_com,
+@online{stroustrup_com,
     author = "Bjarne Stroustrup",
-    note   = "Dostęp zdalny (28.10.2020): \url{https://www.stroustrup.com/bs_faq.html#name}",
+    url= "stroustrup.com/bs_faq.html",
+    urldate = {2020-10-28},
 }
 @article{template_turing_complete,
 author = {Veldhuizen, Todd},
