--- a/Papers/WUT-Master-Thesis/main.tex
+++ b/Papers/WUT-Master-Thesis/main.tex
@@ -6,7 +6,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[
-    left=2.5cm,         % Sadly, generic margin parameter
+    left=2.5cm,         % Sadly, generic margin parameter 
     right=2.5cm,        % doesnt't work, as it is
     top=2.5cm,          % superseded by more specific
     bottom=3cm,         % left...bottom parameters.
@@ -17,7 +17,7 @@
 \langpol % Dla języka angielskiego mamy \langeng
 \graphicspath{{img/}}             % Katalog z obrazkami.
 \addbibresource{bibliografia.bib} % Plik .bib z bibliografią
-\usepackage{minted}
+\usepackage{listings}
 
 \begin{document}
 
