--- a/Papers/WUT-Master-Thesis/tex/1-wstep.tex
+++ b/Papers/WUT-Master-Thesis/tex/1-wstep.tex
@@ -11,5 +11,5 @@ Meta-program można zdefiniować jako aplikację która spełnia jedno z następ
 \end{enumerate}
 Zaproponowane mechanizmy umożliwiają stworzenie aplikacji jawnie złożonej z dwóch części. Konwencjonalnego programu, który zostanie skompilowany do formy wykonywalnej oraz meta-programu, który zostanie wykonany w czasie kompilacji. Celem drugiej części kodu jest walidacja i modyfikacja pierwszej części.
 Aby to osiągnąć, zaprojektowany został nowy, uproszczony język programowania zawierający proponowane mechanizmy. To podejście zostało przyjęte, aby ułatwić pisanie kompilatora. Tworzenie nowego języka daje możliwość podejmowania decyzji, które upraszczają jego analizę, kosztem wygody programisty.
-Kontynuując tradycję zaczętą przez Bjarne Stroustrup-a nazwa, którą nadano temu nowemu językowi, jest żartem programistycznym. C++ swoją nazwę wziął od jednego ze sposobów na inkrementację zmiennej o nazwie C \cite{stroustrup_com}. W ten sam sposób w który C++ jest rozwiniętą wersją C, C-=-1 (wymawiane „cm”) jest nietypową alternatywą dla C++. C-=-1 zostało nazwane na podstawie C++ ponieważ dzieli z nim podstawy filozoficzne oraz niektóre decyzje projektowe. Te podobieństwa zostały opisane w rozdziale 3.
+Kontynuując tradycję zaczętą przez Bjarne Stroustrup-a nazwa, którą nadano temu nowemu językowi, jest żartem programistycznym. C++ swoją nazwę wziął od jednego ze sposobów na inkrementację zmiennej o nazwie C \cite{stroustrup_com}. W ten sam sposób w który C++ jest rozwiniętą wersją C, C-=-1 (wymawiane "cm") jest nietypową alternatywą dla C++. C-=-1 zostało nazwane na podstawie C++ ponieważ dzieli z nim podstawy filozoficzne oraz niektóre decyzje projektowe. Te podobieństwa zostały opisane w rozdziale 3.
 W ramach prac badawczych, zaimplementowano podstawową bibliotekę standardową oraz napisano szereg prostych programów z jej wykorzystaniem. Następnie porównano je z ekwiwalentnymi programami w innych językach programowania, pod kątem złożoności, czytelności i powstałych plików wykonywalnych.
