--- a/Papers/WUT-Master-Thesis/tex/4-implementacja.tex
+++ b/Papers/WUT-Master-Thesis/tex/4-implementacja.tex
@@ -1,6 +1,7 @@
 \section{Implementacja}
 W celu przeprowadzenia prac badawczych na temat konsekwencji zaproponowanych mechanizmów, koniecznym było zaimplementowanie podstawowego kompilatora. 
 \subsection{Fazy kompilacji}
+\label{Compilation_phases}
 Ze względu na nietypową konstrukcję C-=-1, proces kompilacji musi być dłuższy oraz ostrożniej zaprojektowany niż w typowym statycznie typowanym języku programowania.
 Ponieważ użytkownik ma pisać kod, który będzie modyfikował wewnętrzne struktury danych kompilatora, musi on wiedzieć kiedy które jej elementy są gotowe.
 Kolejność operacji wykonywanych przez kompilator, staje się przez to częścią języka.
