--- a/Papers/WUT-Master-Thesis/main.tex
+++ b/Papers/WUT-Master-Thesis/main.tex
@@ -78,16 +78,21 @@ C-=-1 proponuje nowe podejście do konstrukcji kompilatora, umożliwiające wpro
 \cleardoublepage % Zaczynamy od nieparzystej strony
 \pagestyle{headings}
 
-\input{tex/1-wstep}         % Wygodnie jest trzymać każdy rozdział w osobnym pliku.
-\input{tex/2-Istniejace}    % Umożliwia to również łatwą migrację do nowej wersji szablonu:
-\input{tex/3-projekt-jezyka} % wystarczy podmienić swoje pliki main.tex i eiti-thesis.cls
+\input{tex/1-wstep}
+\newpage
+\input{tex/2-Istniejace}
+\newpage
+\input{tex/3-projekt-jezyka}
+\newpage
 \input{tex/4-implementacja}
+\newpage
 \input{tex/5-porownanie-z-jezykami}
+\newpage
 \input{tex/6-wyzwania}
+\newpage
 \input{tex/7-wnioski}
 
 \newpage % Rozdziały zaczynamy od nowej strony
-\section{Summatio}          % Można też pisać rozdziały w jednym pliku.
 
 
 %--------------------------------------------
