--- a/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
+++ b/Papers/WUT-Master-Thesis/tex/6-wyzwania.tex
@@ -2,6 +2,9 @@
 \subsection{Instancje generyków jako element modelu semantycznego}
 Gdzie wsadzić instancję generyka?
 
+\subsection{Kod wykonywany w fazie kompilacji}
+O tym czemu atrybuty są przetwarzane przed kodem i nie mogą używać funkcji z biblioteki w której zostały zdefiniowane.
+
 \subsection{Funkcje generyczne z ograniczeniami}
 
 Funkcje mogą być wykluczane z użycia w trakcie uruchomienia lub kompilacji. Jeśli generyk takiej funkcji zostanie stworzony z typem dalej ograniczającym wykonywalność tej funkcji, ona może być wykonywalna nigdy.
@@ -22,7 +25,11 @@ Na wczesnych etapach implementacji, instancje funkcji generycznych były tworzon
 Takie samo założenie obowiązuje przy tworzeniu zwykłych funkcji, ponieważ ze względu na ograniczenia czasowe, raportowanie o błędach kompilacji nie jest częścią pracy.
 Kompilator najpierw kompletował reprezentacje pośrednią instancji wszystkich wersji generyków pasujących do danego użycia.
 Przy próbie dynamicznej alokacji typu który nie mógł istnieć w czasie uruchomienia, takiego jak deskryptor funkcji, prowadziło to do odrzucenia poprawnego programu.
-%todo: complete
+
+Naprawa tego problemu, wymagała weryfikacji czy dana funkcja jest wykonywalna, w jakimkolwiek kontekście, po wykonaniu kodu powiązanych atrybutów.
+Alternatywnym podejściem jest ignorowanie traktowanie błędów w instancji generyka, jako sygnał do odrzucenia tej specjalizacji, tak jak zostało to rozwiązane w C++. %todo: cite SFINAE
+Takie rozwiązanie mogłoby jednak prowadzić do zaśmiecania modelu semantycznego funkcjami, które nie mogą zostać użyte w żadnym kontekście i nie zawierały akurat żadnych błędów.
+%todo: formalize?
 \subsection{Operator new}
 \label{operator_new}
 Operator \lstinline{new} w C-=-1, tak jak w C++ służy do dynamicznej alokacji pamięci na stercie.
